admission/ValidatingAdmissionPolicy/policies/selinux-role/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selinux-role-containers
  annotations:
    kubeapt.io/uuid: "dbc328e1-5d2c-4b45-93f6-d490ad81f01e"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    securityContext:
      seLinuxOptions:
        role: role_r
